fixed fonts and spacing in the details container

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Quicksand&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 
 
 
 body{
     background-color: #319795;
     color:black;
-    font-family:'Courier New', Courier, monospace;
+    font-family: "Poppins", sans-serif;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -34,8 +36,8 @@ h2{
 .tittle_p1{
     font-weight: 400;
     font-size: 17px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .password-wrapper{
@@ -45,7 +47,7 @@ h2{
     align-items: center;
     background-color: whitesmoke;
     margin: 100px;
-    
+    z-index: 1;
     border-radius: 2rem;
     border: black .1rem solid;
 }
@@ -53,6 +55,9 @@ h2{
 .password-container{
     display: flex;
     gap: 1rem;
+    width:100%;
+    padding-left: 25%;;
+    margin-top: 1rem;
     
 
 }
@@ -60,14 +65,14 @@ h2{
     display: flex;
     align-items: center;
     gap: .3rem;
-    border: black 0.1rem solid;
-    border-radius: 1rem;
+    border: black 0.2rem solid;
+    border-radius: 0.5rem;
 }
 .field-box{
     height: 25px;
     border:none;
     outline: none;
-    width: 100%;
+    width: 250px;
     padding: 11px 12px;
     font-weight: 600;
 }
@@ -166,10 +171,12 @@ h2{
 }
 .details-container{
     margin-top: 2rem;
+    margin-bottom: 2.2rem;
     display: flex;
     flex-direction: column;
-   
+    width:100%;
     align-items: start;
+    padding-left: 22%;
     
 }
 
@@ -177,7 +184,14 @@ h2{
     display: flex;
     margin: .4rem;
     align-items: center;
-    justify-content:space-between;
     
+}
 
+.checkbox-wrapper input{
+    
+    position: absolute;
+    width: 20px; 
+    height: 20px;
+    margin-left: 35%;
+    
 }
